refactor: melhorando os metodos nas Services: Consulta, Medico e Paciente